examples/misc/error/compilation/eval_nd-var_module.bfr
let c = 0
module B = import "../../metalang/import_b.bfr"

let _ = B.c

codegen []